--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				wrt();
 				if (ok == 1) {
 					ply = 0;
-					document.getElementById("desc").innerHTML = "Congratulations! You won!";
+					document.getElementById("desc").innerHTML = "<b>Congratulations! You won!<b>";
 					document.getElementById("start").innerHTML = "<button id='replayg' onclick=restartg()>Replay</button>";
 				}
 				clk++;
@@ -118,10 +118,10 @@
 				for (i = 1; i <= n; ++i) {
 					for (j = 1; j <= m; ++j) {
 						if (v[i][j] == 1) {
-							document.getElementById("v").innerHTML += "<div class='block one' onclick=chg(" + i + "," + j +")></div>";
+							document.getElementById("v").innerHTML += "<div class='block pl one' onclick=chg(" + i + "," + j +")></div>";
 						}
 						else {
-							document.getElementById("v").innerHTML += "<div class='block zero' onclick=chg(" + i + "," + j +")></div>";
+							document.getElementById("v").innerHTML += "<div class='block pl zero' onclick=chg(" + i + "," + j +")></div>";
 						}
 					}
 					document.getElementById("v").innerHTML += "<br>";
@@ -150,7 +150,7 @@
 					}
 				}
 				document.getElementById("start").innerHTML = "<button id='restartb' onclick=restartg()>Restart</button>";
-				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left side to change its and its neighbours colour.<br>Make both grids look the same.";
+				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
 				wrt();
 				clk = 0;
 				ply = 1;
@@ -164,34 +164,44 @@
 				wrta();
 				document.getElementById("start").innerHTML = "<button id='restartg' onclick=restartg()>Restart</button>";
 				document.getElementById("newg").innerHTML = "<button id='newg' onclick=start()>New Game</button>";
-				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left side to change its and its neighbours colour.<br>Make both grids look the same.";
+				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
 				clk = 0;
 				ply = 1;
 				document.getElementById("score").innerHTML = clk;
 			}
-			function veasy() {
+			function d2x2() {
 				n = 2;
 				m = 2;
 				start();
 			}
-			function easy() {
+			function d3x3() {
 				n = 3;
 				m = 3;
 				start();
 			}
-			function med() {
+			function d4x4() {
 				n = 4;
 				m = 4;
 				start();
 			}
-			function hard() {
+			function d5x5() {
 				n = 5;
 				m = 5;
 				start();
 			}
-			function vhard() {
+			function d6x6() {
 				n = 6;
 				m = 6;
+				start();
+			}
+			function d7x7() {
+				n = 7;
+				m = 7;
+				start();
+			}
+			function d8x8() {
+				n = 8;
+				m = 8;
 				start();
 			}
 		</script>
@@ -207,11 +217,11 @@
 				
 				</div>
 				<div style="clear:both;">
-					<p id="desc" style="height:40px; width:900px"><b>How to play:</b> Click on a square from the left side to change its and its neighbours colour.<br>Make both grids look the same.</p>
+					<p id="desc" style="height:40px; width:900px"><b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.</p>
 					<p id="bf_score" style="font-weight:bold; height:20px;">Score: <span id="score">-</span></p>
-					<p style="height:30px;"><span id = "start">Choose a difficulty</span> <span id="newg"></span></p>
-					<p><button id="veasy" onclick=veasy()>Very Easy</button> <button id="easy" onclick=easy()>Easy</button> <button id="med" onclick=med()>Medium</button> <button id="hard" onclick=hard()>Hard</button> <button id="veasy" onclick=vhard()>Very Hard</button></p>
-					<h4>Created by Tudor Tarniceru</h4>
+					<p style="height:30px;"><span id = "start">Choose the size of the grids.</span> <span id="newg"></span></p>
+					<p><button id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" onclick=d3x3()>3x3</button> <button id="d4x4" onclick=d4x4()>4x4</button> <button id="d5x5" onclick=d5x5()>5x5</button> <button id="d6x6" onclick=d6x6()>6x6</button> <button id="d7x7" onclick=d7x7()>7x7</button> <button id="d8x8" onclick=d8x8()>8x8</button></p>
+					<h4>Created by Tudor Ta&#774;rniceru</h4>
 					<h5>Alpha(&alpha;) Version</h5>
 				</div>
 			</div>
