--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 			var d1 = [0, -1, 0, 1, 0];
 			var d2 = [0, 0, 1, 0, -1];
 			var clk = 0;
+			var stk = 0;
 			var ply = 1;
+			var done = 0;
 			function check() {
 				var ok = 1;
 				for (i = 1; i <= n; ++i) {
@@ -31,9 +33,14 @@
 					ply = 0;
 					document.getElementById("desc").innerHTML = "<b>Congratulations! You won!<b>";
 					document.getElementById("start").innerHTML = "<button id='replayg' onclick=restartg()>Replay</button>";
+					if (done == 0) {
+						stk++;
+					}
+					done = 1;
 				}
 				clk++;
 				document.getElementById("score").innerHTML = clk;
+				document.getElementById("streak").innerHTML = stk;
 			}
 			function init() {
 				for (i = 0; i <= n + 1; ++i) {
@@ -126,7 +133,6 @@
 					}
 					document.getElementById("v").innerHTML += "<br>";
 				}
-				document.getElementById("v").innerHTML += "<br>";
 			}
 			function wrta() {
 				document.getElementById("a").innerHTML = "";
@@ -141,7 +147,6 @@
 					}
 					document.getElementById("a").innerHTML += "<br>";
 				}
-				document.getElementById("a").innerHTML += "<br>";
 			}
 			function restartg() {
 				for (i = 1; i <= n; ++i) {
@@ -149,14 +154,22 @@
 						v[i][j] = vc[i][j];
 					}
 				}
+				if (done == 0) {
+					stk = 0;
+				}
 				document.getElementById("start").innerHTML = "<button id='restartb' onclick=restartg()>Restart</button>";
 				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
 				wrt();
 				clk = 0;
 				ply = 1;
 				document.getElementById("score").innerHTML = clk;
+				document.getElementById("streak").innerHTML = stk;
 			}
 			function start() {
+				if (done == 0) {
+					stk = 0;
+				}
+				done = 0;
 				gen();
 				gena();
 				copy();
@@ -168,6 +181,7 @@
 				clk = 0;
 				ply = 1;
 				document.getElementById("score").innerHTML = clk;
+				document.getElementById("streak").innerHTML = stk;
 			}
 			function d2x2() {
 				n = 2;
@@ -218,7 +232,7 @@
 				</div>
 				<div style="clear:both;">
 					<p id="desc" style="height:40px; width:900px"><b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.</p>
-					<p id="bf_score" style="font-weight:bold; height:20px;">Score: <span id="score">-</span></p>
+					<p><span id="bf_score" style="font-weight:bold; height:20px;">Score: <span id="score">-</span>&nbsp;|&nbsp;<span id="bf_streak" style="font-weight:bold; height:20px;">Win Streak: <span id="streak">-</span></p>
 					<p style="height:30px;"><span id = "start">Choose the size of the grids.</span> <span id="newg"></span></p>
 					<p><button id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" onclick=d3x3()>3x3</button> <button id="d4x4" onclick=d4x4()>4x4</button> <button id="d5x5" onclick=d5x5()>5x5</button> <button id="d6x6" onclick=d6x6()>6x6</button> <button id="d7x7" onclick=d7x7()>7x7</button> <button id="d8x8" onclick=d8x8()>8x8</button></p>
 					<h4>Created by Tudor Ta&#774;rniceru</h4>
