The Switch Game

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					if (done == 0) {
 						stk++;
 					}
+					document.getElementById("newg").innerHTML = "<button id='newg' class='done' onclick=start()>New Game</button>";
 					done = 1;
 				}
 				clk++;
