The Switch Game

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			var stk = 0;
 			var ply = 1;
 			var done = 0;
+			var csn = 1;
+			var csm = 1;
 			function check() {
 				var ok = 1;
 				for (i = 1; i <= n; ++i) {
@@ -32,11 +34,11 @@
 				if (ok == 1) {
 					ply = 0;
 					document.getElementById("desc").innerHTML = "<b>Congratulations! You won!<b>";
-					document.getElementById("start").innerHTML = "<button id='replayg' onclick=restartg()>Replay</button>";
+					document.getElementById("start").innerHTML = "<button class='a' id='replayg' onclick=restartg()>Replay</button>";
 					if (done == 0) {
 						stk++;
 					}
-					document.getElementById("newg").innerHTML = "<button id='newg' class='done' onclick=start()>New Game</button>";
+					document.getElementById("newg").innerHTML = "<button class='a done' id='newg' onclick=start()>New Game</button>";
 					done = 1;
 				}
 				clk++;
@@ -155,13 +157,15 @@
 						v[i][j] = vc[i][j];
 					}
 				}
-				document.getElementById("start").innerHTML = "<button id='restartb' onclick=restartg()>Restart</button>";
+				document.getElementById("start").innerHTML = "<button class='a' id='restartb' onclick=restartg()>Restart</button>";
 				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
 				wrt();
 				clk = 0;
 				ply = 1;
 				document.getElementById("score").innerHTML = clk;
 				document.getElementById("streak").innerHTML = stk;
+				document.getElementById("customdim").innerHTML = "Good Luck, Have Fun!";
+				document.getElementById("customerr").innerHTML = "";
 			}
 			function start() {
 				if (done == 0) {
@@ -173,9 +177,11 @@
 				copy();
 				wrt();
 				wrta();
-				document.getElementById("start").innerHTML = "<button id='restartg' onclick=restartg()>Restart</button>";
-				document.getElementById("newg").innerHTML = "<button id='newg' onclick=start()>New Game</button>";
+				document.getElementById("start").innerHTML = "<button class='a' id='restartg' onclick=restartg()>Restart</button>";
+				document.getElementById("newg").innerHTML = "<button class='a' id='newg' onclick=start()>New Game</button>";
 				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
+				document.getElementById("customdim").innerHTML = "Good Luck, Have Fun!";
+				document.getElementById("customerr").innerHTML = "";
 				clk = 0;
 				ply = 1;
 				document.getElementById("score").innerHTML = clk;
@@ -216,6 +222,27 @@
 				m = 8;
 				start();
 			}
+			function customn() {
+				csn = document.getElementById("selectn").value;
+			}
+			function customm() {
+				csm = document.getElementById("selectm").value;
+			}
+			function submitcst() {
+				if (csn * csm < 4) {
+					document.getElementById("customerr").innerHTML = " ERROR!";
+				}
+				else {
+					n = csn;
+					m = csm;
+					start();
+				}
+			}
+			function customset() {
+				csn = 1;
+				csm = 1;
+				document.getElementById("customdim").innerHTML = "Choose the size. The grids must have at least 4 elements each. Rows: <select id='selectn' class='b' onchange='customn()'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option><option value='8'>8</option></select> Collumns: <select id='selectm' class='b' onchange='customm()'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option><option value='8'>8</option></select> <button id='submitcst' class='b' onclick='submitcst()'>Submit</button>";
+			}
 		</script>
 	</head>
 	<body>
@@ -232,9 +259,12 @@
 					<p id="desc" style="height:40px; width:900px"><b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.</p>
 					<p><span id="bf_score" style="font-weight:bold; height:20px;">Score: <span id="score">-</span>&nbsp;|&nbsp;<span id="bf_streak" style="font-weight:bold; height:20px;">Win Streak: <span id="streak">-</span></p>
 					<p style="height:30px;"><span id = "start">Choose the size of the grids.</span> <span id="newg"></span></p>
-					<p><button id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" onclick=d3x3()>3x3</button> <button id="d4x4" onclick=d4x4()>4x4</button> <button id="d5x5" onclick=d5x5()>5x5</button> <button id="d6x6" onclick=d6x6()>6x6</button> <button id="d7x7" onclick=d7x7()>7x7</button> <button id="d8x8" onclick=d8x8()>8x8</button></p>
-					<h4>Created by Tudor Ta&#774;rniceru</h4>
-					<h5>Alpha(&alpha;) Version</h5>
+					<div><p><button class='a' id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" class='a' onclick=d3x3()>3x3</button> <button id="d4x4" class='a' onclick=d4x4()>4x4</button> <button id="d5x5" class='a' onclick=d5x5()>5x5</button> <button id="d6x6" class='a' onclick=d6x6()>6x6</button> <button id="d7x7" class='a' onclick=d7x7()>7x7</button> <button id="d8x8" class='a' onclick=d8x8()>8x8</button> <button id="customset" class='a' onclick=customset()>Custom</button></p></div>
+					<div id="custom_zone" style="height:15px;"><span id="customdim">Good Luck, Have Fun!</span><span id="customerr" style="color:red;font-weight:bold;"></span></div>
+					<div id="credits">
+						<h4>Created by Tudor Ta&#774;rniceru</h4>
+						<h5>Alpha(&alpha;) Version</h5>
+					</div>
 				</div>
 			</div>
 		</center>
