My Personal Website

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	</head>
 	<body>
 		<center>
-			<div style="background-color:black; float:top;">
+			<div style="background-color:black">
 				<ul>
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
 				</ul>
 			</div>
-			<br><br><br><br><br><br><br><br>
+			<br><br><br>
 			<div class="showcase">
 				<div class="title"><p>Switch</p></div>
 				<div class="desc"><p><img src="data/switchs.jpg" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.<br><br><span style="font-size:13px;">Currently in alpha(&alpha;).</span></p></div>
