--- a/switch/index.html
+++ b/switch/index.html
@@ -117,7 +117,7 @@
 			}
 			function copy() {
 				for (i = 1; i <= n; ++i) {
-					for (j = 1; j <= n; ++j) {
+					for (j = 1; j <= m; ++j) {
 						vc[i][j] = v[i][j];
 					}
 				}
@@ -247,8 +247,13 @@
 	</head>
 	<body>
 		<center>
+			<div style="background-color:black">
+				<ul class="mm">
+					<li class="mm item"><a href="https://tudortarniceru.github.io">Tudor Tarniceru</a></li>
+					<li class="mm active"><a>Switch</a></li>
+				</ul>
+			</div>
 			<div class="game_zone">
-				<h3>Switch</h3>
 				<div class="gsquare v" id="v">
 				
 				</div>
@@ -260,9 +265,9 @@
 					<p><span id="bf_score" style="font-weight:bold; height:20px;">Score: <span id="score">-</span>&nbsp;|&nbsp;<span id="bf_streak" style="font-weight:bold; height:20px;">Win Streak: <span id="streak">-</span></p>
 					<p style="height:30px;"><span id = "start">Choose the size of the grids.</span> <span id="newg"></span></p>
 					<div><p><button class='a' id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" class='a' onclick=d3x3()>3x3</button> <button id="d4x4" class='a' onclick=d4x4()>4x4</button> <button id="d5x5" class='a' onclick=d5x5()>5x5</button> <button id="d6x6" class='a' onclick=d6x6()>6x6</button> <button id="d7x7" class='a' onclick=d7x7()>7x7</button> <button id="d8x8" class='a' onclick=d8x8()>8x8</button> <button id="customset" class='a' onclick=customset()>Custom</button></p></div>
-					<div id="custom_zone" style="height:15px;"><span id="customdim">Good Luck, Have Fun!</span><span id="customerr" style="color:red;font-weight:bold;"></span></div>
-					<div id="credits">
-						<h4>Created by <a href="https://tudortarniceru.github.io">Tudor Ta&#774;rniceru</a></h4>
+					<div id="custom_zone" style="height:15px;"><span id="customdim">Good Luck, Have Fun!</span><span id="customerr" style="color:#d24646;font-weight:bold;"></span></div>
+					<div id="credits" class="credits">
+						<h4>Created by Tudor Tarniceru</h4>
 						<h5>Alpha(&alpha;) Version</h5>
 					</div>
 				</div>
