--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
 				<ul>
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
+					<li class="soon"><a>Gomoku<sup style="font-size:10px;color:yellow;">Soon</sup></a></li>
 				</ul>
 			</div>
-			<br><br><br>
-			<div class="showcase">
-				<div class="title"><p>Switch</p></div>
-				<div class="desc"><p><img src="data/switchs.jpg" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.<br><br><span style="font-size:13px;">Currently in alpha(&alpha;).</span></p></div>
-				<div class="players">Singleplayer</div>
-				<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
+			<br><br>
+			<div>
+				<div class="showcase" id="switch">
+					<div class="title"><p>Switch</p></div>
+					<div class="desc"><p><img src="data/switchs.jpg" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.</p></div>
+					<div class="status">Currently in alpha(&alpha;)</div>
+					<div class="players">Singleplayer</div>
+					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
+				</div>
+				<div class="showcase" id="gomoku" style="filter:brightness(75%);">
+					<div class="title"><p>Gomoku</p></div>
+					<div class="desc"><p><img src="data/gomokus.jpg" height="170" width="170"><br><br>Gomoku is a table game also known as five in a row in which two players place pieces on a 15x15 grid. The fisrt player who lines up 5 pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
+					<div class="status">Currently in development</div>
+					<div class="players">Local Multiplayer</div>
+					<div class="soon"></p><a>Coming Soon</a></p></div>
+				</div>
 			</div>
 			</center>
 	</body>
