My Personal Website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<div class="players">Singleplayer</div>
 					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
 				</div>
-				<div class="showcase" id="gomoku" style="filter:brightness(75%);">
+				<div class="showcase" id="gomoku" style="filter:brightness(75%); -webkit-filter:brightness(75%);">
 					<div class="title"><p>Gomoku</p></div>
 					<div class="desc"><p><img src="data/gomokus.jpg" height="170" width="170"><br><br>Gomoku is a table game also known as five in a row in which two players place pieces on a 15x15 grid. The fisrt player who lines up 5 pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
 					<div class="status">Currently in development</div>
