My Personal Website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<ul>
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
-					<li class="soon"><a>Gomoku<sup style="font-size:10px;color:yellow;">Soon</sup></a></li>
+					<li class="item"><a href="gomoku/index.html">Gomoku<sup style="font-size:10px;color:yellow;">New</sup></a></li>
 				</ul>
 			</div>
 			<br><br>
@@ -24,12 +24,12 @@
 					<div class="players">Singleplayer</div>
 					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
 				</div>
-				<div class="showcase" id="gomoku" style="filter:brightness(75%); -webkit-filter:brightness(75%);">
+				<div class="showcase" id="gomoku">
 					<div class="title"><p>Gomoku</p></div>
 					<div class="desc"><p><img src="data/gomokus.jpg" height="170" width="170"><br><br>Gomoku is a table game also known as five in a row in which two players place pieces on a 15x15 grid. The fisrt player who lines up 5 pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
-					<div class="status">Currently in development</div>
+					<div class="status">Currently in alpha(&alpha;)</div>
 					<div class="players">Local Multiplayer</div>
-					<div class="soon"></p><a>Coming Soon</a></p></div>
+					<div class="play"></p><a href="gomoku/index.html">Play Now</a></p></div>
 				</div>
 			</div>
 			</center>
