My Personal Website

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="showcase" id="switch">
 					<div class="title"><p>Switch</p></div>
 					<div class="desc"><p><img src="data/switchs.jpg" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.</p></div>
-					<div class="status">Currently in alpha(&alpha;)</div>
+					<div class="status">Currently in beta(&beta;)</div>
 					<div class="players">Singleplayer</div>
 					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
 				</div>
