--- a/switch/index.html
+++ b/switch/index.html
@@ -318,7 +318,7 @@
 				<ul class="mm">
 					<li class="mm item"><a href="https://tudortarniceru.github.io">Tudor Tarniceru</a></li>
 					<li class="mm active"><a>Switch</a></li>
-					<li class="mm item"><a href="https://tudortarniceru.github.io/gomoku/index.html">InRows<sup style="font-size:10px;color:yellow;">New</sup></a></li>
+					<li class="mm item"><a href="https://tudortarniceru.github.io/inrows/index.html">InRows</a></li>
 				</ul>
 			</div>
 			<div class="game_zone">
